Refactoring components and routes - updating dependencies - adding a home page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>React + Webapack + ES6 Starter</title>
+	<title>React + react-router code-chunking example</title>
 </head>
 <body>
 	<div id="application"></div>
